@startuml MPD_Merise
!define table(x) class x << (T,#FFAAAA) >>
left to right direction
skinparam packageStyle rectangle

' Définition des entités avec typage PostgreSQL

table(continent) {
  {static} id: //BIGSERIAL//
  {field} name: //VARCHAR(50)//
  {field} code: //VARCHAR(50)//
  {field} population: //BIGINT//
  {field} created_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} created_by: //VARCHAR(50) DEFAULT 'system'//
  {field} updated_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} updated_by: //VARCHAR(50) DEFAULT 'system'//
  {field} deleted_at: //TIMESTAMP//
  {field} deleted_by: //VARCHAR(50)//
  {field} is_deleted: //BOOLEAN DEFAULT FALSE//
}

table(country) {
  {static} id: //BIGSERIAL//
  {field} name: //VARCHAR(50)//
  {field} iso2: //VARCHAR(50)//
  {field} iso3: //VARCHAR(50)//
  {field} population: //BIGINT//
  {field} continent_id: //BIGINT REFERENCES continent(id)//
  {field} created_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} created_by: //VARCHAR(50) DEFAULT 'system'//
  {field} updated_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} updated_by: //VARCHAR(50) DEFAULT 'system'//
  {field} deleted_at: //TIMESTAMP//
  {field} deleted_by: //VARCHAR(50)//
  {field} is_deleted: //BOOLEAN DEFAULT FALSE//
}

table(user) {
  {static} id: //BIGSERIAL//
  {field} firstname: //VARCHAR(50)//
  {field} lastname: //VARCHAR(50)//
  {field} username: //VARCHAR(50)//
  {field} email: //VARCHAR(100) UNIQUE//
  {field} password: //VARCHAR(100)//
  {field} gender: //VARCHAR(10)//
  {field} birthdate: //VARCHAR(10)//
  {field} created_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} created_by: //VARCHAR(50) DEFAULT 'system'//
  {field} updated_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} updated_by: //VARCHAR(50) DEFAULT 'system'//
  {field} deleted_at: //TIMESTAMP//
  {field} deleted_by: //VARCHAR(50)//
  {field} is_deleted: //BOOLEAN DEFAULT FALSE//
}

table(role) {
  {static} id: //BIGSERIAL//
  {field} name: //VARCHAR(50)//
  {field} description: //VARCHAR(100)//
  {field} created_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} created_by: //VARCHAR(50) DEFAULT 'system'//
  {field} updated_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} updated_by: //VARCHAR(50) DEFAULT 'system'//
  {field} deleted_at: //TIMESTAMP//
  {field} deleted_by: //VARCHAR(50)//
  {field} is_deleted: //BOOLEAN DEFAULT FALSE//
}

table(epidemic) {
  {static} id: //BIGSERIAL//
  {field} name: //VARCHAR(50)//
  {field} start_date: //DATE//
  {field} end_date: //DATE//
  {field} type: //VARCHAR(50)//
  {field} pathogen_name: //VARCHAR(50)//
  {field} description: //TEXT//
  {field} transmission_mode: //VARCHAR(50)//
  {field} symptoms: //VARCHAR(50)//
  {field} reproduction_rate: //FLOAT//
  {field} created_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} created_by: //VARCHAR(50) DEFAULT 'system'//
  {field} updated_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} updated_by: //VARCHAR(50) DEFAULT 'system'//
  {field} deleted_at: //TIMESTAMP//
  {field} deleted_by: //VARCHAR(50)//
  {field} is_deleted: //BOOLEAN DEFAULT FALSE//
}

table(vaccine) {
  {static} id: //BIGSERIAL//
  {field} name: //VARCHAR(50)//
  {field} laboratory: //VARCHAR(50)//
  {field} technology: //VARCHAR(50)//
  {field} dose: //VARCHAR(50)//
  {field} efficacy: //FLOAT//
  {field} storage_temperature: //VARCHAR(50)//
  {field} epidemic_id: //BIGINT REFERENCES epidemic(id)//
  {field} created_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} created_by: //VARCHAR(50) DEFAULT 'system'//
  {field} updated_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} updated_by: //VARCHAR(50) DEFAULT 'system'//
  {field} deleted_at: //TIMESTAMP//
  {field} deleted_by: //VARCHAR(50)//
  {field} is_deleted: //BOOLEAN DEFAULT FALSE//
}

table(daily_wise) {
  {static} id: //BIGSERIAL//
  {field} date: //TIMESTAMP//
  {field} province: //VARCHAR(50)//
  {field} latitude: //FLOAT//
  {field} longitude: //FLOAT//
  {field} country_id: //BIGINT REFERENCES country(id)//
  {field} created_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} created_by: //VARCHAR(50) DEFAULT 'system'//
  {field} updated_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} updated_by: //VARCHAR(50) DEFAULT 'system'//
  {field} deleted_at: //TIMESTAMP//
  {field} deleted_by: //VARCHAR(50)//
  {field} is_deleted: //BOOLEAN DEFAULT FALSE//
}

table(statistic) {
  {static} id: //BIGSERIAL//
  {field} label: //VARCHAR(50)//
  {field} value: //FLOAT//
  {field} daily_wise_id: //BIGINT REFERENCES daily_wise(id)//
  {field} epidemic_id: //BIGINT REFERENCES epidemic(id)//
  {field} country_id: //BIGINT REFERENCES country(id)//
  {field} vaccine_id: //BIGINT REFERENCES vaccine(id)//
  {field} published_at: //VARCHAR(50)//
  {field} published_by: //VARCHAR(50)//
  {field} created_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} created_by: //VARCHAR(50) DEFAULT 'system'//
  {field} updated_at: //TIMESTAMP DEFAULT CURRENT_TIMESTAMP//
  {field} updated_by: //VARCHAR(50) DEFAULT 'system'//
  {field} deleted_at: //TIMESTAMP//
  {field} deleted_by: //VARCHAR(50)//
  {field} is_deleted: //BOOLEAN DEFAULT FALSE//
}

' Définition des relations
country --> continent
daily_wise --> country
statistic --> daily_wise
statistic --> country
statistic --> epidemic
statistic --> vaccine
vaccine --> epidemic
user --> role
@enduml
